some test cases showing error

--- a/pom.xml
+++ b/pom.xml
@@ -9,12 +9,13 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>TaxyBookingAndBilling</artifactId>
+	<artifactId>TaxiBookingAndBilling</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>TaxyBookingAndBilling</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
+		<spotless.version>2.38.0</spotless.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -127,6 +128,34 @@
 					</excludes>
 				</configuration>
 			</plugin>
+<!--			<plugin>&ndash;&gt;-->
+<!--							<groupId>com.diffplug.spotless</groupId>-->
+<!--							<artifactId>spotless-maven-plugin</artifactId>-->
+<!--							<version>${spotless.version}</version>-->
+<!--							<configuration>-->
+<!--								<formats>-->
+<!--									<format>-->
+<!--										<includes>-->
+<!--											<include>*.md</include>-->
+<!--											<include>.gitignore</include>-->
+<!--										</includes>-->
+<!--										<trimTrailingWhitespace/>-->
+<!--										<endWithNewline/>-->
+<!--										<indent>-->
+<!--											<tabs>true</tabs>-->
+<!--											<spacesPerTab>4</spacesPerTab>-->
+<!--										</indent>-->
+<!--									</format>-->
+<!--								</formats>-->
+<!--								<java>-->
+<!--									<googleJavaFormat>-->
+<!--										<version>1.10.0</version>-->
+<!--										<style>AOSP</style>-->
+<!--										<reflowLongStrings>true</reflowLongStrings>-->
+<!--									</googleJavaFormat>-->
+<!--								</java>-->
+<!--							</configuration>-->
+<!--						</plugin>-->
 
 			<plugin>
 				<groupId>org.jacoco</groupId>
